# fungible-token

./: Cargo.toml
src/: contract.rs
state/src/: lib.rs
tests/: hello_world_test.rs
